# postureexp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  task.md
.github/workflows/: build.yml
python-service/: build_sidecar.sh  main.py  requirements.txt
python-service/calibration/: manager.py
python-service/detector/: hand_face.py  posture.py
python-service/models/: __init__.py
python-service/storage/: session.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AchievementPopup.tsx  AlertToast.tsx  CalibrationModal.tsx  Sidebar.tsx  Spino.tsx  StatusBadge.tsx  XpToast.tsx
src/lib/: cv-bridge.ts  sounds.ts  store.ts  utils.ts
src/pages/: DashboardPage.tsx  MonitorPage.tsx  SettingsPage.tsx
src/types/: index.ts
